syntax = "proto3";

package backup;
option go_package = "./backup";

message AddressInfo {
  string Address = 1;
  string Area = 2;
  string Phone = 3;
  string Email = 4;
  string Mnemonic = 5;
  string PrivateKey = 6;
  int64 UpdateTime = 7;
  int64 CreateTime = 8;
}

message QueryBindReq {
  message phone {
    string area = 1;
    string phone = 2;
  }
  message email { string email = 1; }
  oneof params {
    phone bind_phone = 1;
    email bind_email = 2;
  }
}

message QueryBindResp { AddressInfo info = 1; }

message QueryRelatedReq {
  message phone {
    string area = 1;
    string phone = 2;
  }
  oneof params { phone bind_phone = 1; }
}

message QueryRelatedResp { AddressInfo info = 1; }

service Backup {
  rpc QueryBind(QueryBindReq) returns (QueryBindResp);
  rpc QueryRelated(QueryRelatedReq) returns (QueryRelatedResp);
}
